tests/compile_fail/headers_empty_name.stderr
error: header name cannot be empty
 --> tests/compile_fail/headers_empty_name.rs:7:5
  |
7 |     #[header("")]
  |     ^^^^^^^^^^^^^
